[jlox] Add infra for statements; implement expr & print statements